--- a/src/html/includes/header-main.html
+++ b/src/html/includes/header-main.html
@@ -15,7 +15,7 @@
     <title>ZOOMFLIRTS</title>
 
 </head>
-<body class="body_main">
+<body>
     <div id="page-preloader" class="preloader">
         <div class="loader"></div>
     </div>
