--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -118,6 +118,12 @@
     margin-bottom: 167px;
     background-image: none !important;
   }
+  &.index {
+    margin-bottom: 0;
+    @media (min-width: 992px) {
+      margin-bottom: 0;
+    }
+  }
   &.bg01mob {
     background-image: url('../img/bg/mobile/bg01.jpg');
   }
@@ -143,6 +149,15 @@
   justify-content: flex-end;
   background-color: rgba(0,0,0,0.21);
   padding: 37px 15px 62px;
+  &.header-firstscreen_main {
+    flex-direction: column;
+    justify-content: flex-start;
+    @media (min-width: 992px) {
+      padding: 0;
+      background-color: transparent;
+      flex-direction: row;
+    }
+  }
   @media (min-width: 992px) {
     padding: 0;
     background-color: transparent;
@@ -160,6 +175,11 @@
   &.header-block_bg-red {
     @media (min-width: 992px) {
       background-color: $btn_bg_color;
+    }
+  }
+  &.header-block_bg-dark {
+    @media (min-width: 992px) {
+      background-color: $bg_dark_1;
     }
   }
   &.header-block_bg-img {
@@ -206,17 +226,39 @@
       background-size: 100%;
     }
   }
+  &.index {
+    background: url('../img/bg/mobile/bg-text-index.svg') 50% 50% no-repeat;
+    background-size: 100%;
+    @media (min-width: 540px) {
+      background: url('../img/bg/mobile/bg-text-index.svg') 50% 5% no-repeat;
+      background-size: 100%;
+    }
+    @media (min-width: 992px) {
+      background: url('../img/bg/desktop/bg-text-index.svg') 50% 40% no-repeat;
+      background-size: 65%;
+    }
+  }
+  &.index-logo {
+    @media (min-width: 992px) {
+      flex-direction: column;
+      background: url('../img/icons/logo-bg.svg') 46% 36% no-repeat;
+      background-size: 50%;
+    }
+    @media (min-width: 1200px) {
+      background: url('../img/icons/logo-bg.svg') 48% 36% no-repeat;
+      background-size: 35%;
+    }
+  }
 }
 
 
 .header__titlebox {
-  margin-bottom: 20px;
-  @media (min-width: 768px) {
-    width: 250px;
-    margin-bottom: 0;
+  @media (min-width: 540px) {
+    width: 400px;
+    margin: 0 auto;
   }
   @media (min-width: 992px) {
-    width: 360px;
+    width: 490px;
   }
 }
 
@@ -233,49 +275,18 @@
 }
 
 .header__title {
-  width: 210px;
-  margin: 0 auto 40px;
+  margin: 119px auto 50px;
   text-align: center;
   font-weight: 300;
-  font-size: 34px;
-  line-height: 45px;
+  font-size: 50px;
+  line-height: 70px;
   color: #fff;
-  &:before {
-    @media (min-width: 768px) {
-      & {
-        content: '';
-        display: block;
-        width: 60px;
-        height: 1px;
-        border-top: 3px solid $logo_main_color;
-        margin-bottom: 20px;
-      }
-    }
-  }
   @media (min-width: 768px) {
-    & {
-      width: auto;
-      text-align: left;
-      margin: 0 0 50px;
-    }
+    width: auto;
   }
   @media (min-width: 992px) {
-    & {
-      font-size: 45px;
-      line-height: 60px;
-    }
-  }
-  @media (min-width: 1200px) {
-    & {
-      font-size: 67px;
-      line-height: 85px;
-      margin: 0 0 60px;
-    }
-  }
-  @media (min-width: 1440px) {
-    & {
-      font-size: 90px;
-      line-height: 120px;
-    }
+    font-size: 60px;
+    line-height: 80px;
+    margin: 0 auto;
   }
 }
